added personal details

--- a/main.tex
+++ b/main.tex
@@ -3,12 +3,12 @@
 
 % Define the course variables that are gonna be used several times
 \newcommand{\university}{Universidad\ Politécnica\ de\ Madrid}
-\newcommand{\school}{Escuela\ Técnica\ Superior\ de\ XXX}
-\newcommand{\degree}{Grado/Máster\ Universitario\ en\ XXX}    
-\newcommand{\tfm}{Bachelor/Master\ Thesis}
-\newcommand{\name}{XXXXX}
-\newcommand{\me}{--- --- ---}
-\newcommand{\supervisor}{--- --- ---}
+\newcommand{\school}{Escuela\ Técnica\ Superior\ de\ Ingenieros\ Informáticos}
+\newcommand{\degree}{Máster\ Universitario\ en\ Digital Innovation}    
+\newcommand{\tfm}{Master\ Thesis}
+\newcommand{\name}{Easy-to-Read (E2R) Adaptation of Figurative Language}
+\newcommand{\me}{Jelle\ van\ Lieshout}
+\newcommand{\supervisor}{Dr.\ Mari\ Carmen\ Suárez\textendash Figueroa}
 
 % Configure the metadata of the PDF document
 \usepackage[
