docs: Add recent research papers on metaphor detection
Add three new academic papers to the Mendeley bibliography
focusing on metaphor detection using large language models.
Papers cover novel approaches like curriculum-style data
augmentation, theory-guided scaffolding instruction, and
auxiliary context techniques for improving metaphor
detection performance.

--- a/includes/background.tex
+++ b/includes/background.tex
@@ -24,12 +24,12 @@
 \subsection{Literature Review}
 Relevant papers to include:
 \begin{itemize}
-    \item \textit{First steps in the development of a support application for easy-to-read adaptation} (Suárez-Figueroa et al., 2024) - E2R Methodology
-    \item \textit{Towards an Automatic Easy-to-Read Adaptation of Morphological Features in Spanish Texts} - E2R Methodology
-    \item \textit{Metaphors and Analogies in the Context of Large Language Models} (Dmitrijev et al., 2024)
-    \item \textit{An analysis of language models for metaphor recognition} (Neidlein et al., 2020)
-    \item \textit{Testing the Ability of Language Models to Interpret Figurative Language} (Liu et al., 2022)
-    \item \textit{A Survey on Automatic Generation of Figurative Language} (Lai \& Nissim, 2024)
-    \item \textit{Large Language Model Displays Emergent Ability to Interpret Novel Literary Metaphors} (Ichien et al., 2024)
-    \item \textit{Curriculum-style Data Augmentation for LLM-based Metaphor Detection} (Jia et al., 2025)
+    \item \cite{Surez-Figueroa2024} \bibentry{Surez-Figueroa2024}
+    \item \cite{Surez-Figueroa2023} \bibentry{Surez-Figueroa2023}
+    \item \cite{Dmitrijev2024} \bibentry{Dmitrijev2024}
+    \item \cite{Neidlein2020} \bibentry{Neidlein2020}
+    \item \cite{Liu2022} \bibentry{Liu2022}
+    \item \cite{Lai2024} \bibentry{Lai2024}
+    \item \cite{Ichien2024} \bibentry{Ichien2024}
+    \item \cite{Jia2024} \bibentry{Jia2024}
 \end{itemize}
