docs: Update Jia2024 reference metadata
Soft whispers of code
Bib entry blooms with details
Knowledge takes new form

--- a/mendeley.bib
+++ b/mendeley.bib
@@ -13,13 +13,16 @@
   url       = {https://www.mdpi.com/2504-2289/9/9/218},
   year      = {2025}
 }
-@article{Jia2024,
-  abstract = {Recently, utilizing large language models (LLMs) for metaphor detection has achieved promising results. However, these methods heavily rely on the capabilities of closed-source LLMs, which come with relatively high inference costs and latency. To address this, we propose a method for metaphor detection by fine-tuning open-source LLMs, effectively reducing inference costs and latency with a single inference step. Furthermore, metaphor detection suffers from a severe data scarcity problem, which hinders effective fine-tuning of LLMs. To tackle this, we introduce Curriculum-style Data Augmentation (CDA). Specifically, before fine-tuning, we evaluate the training data to identify correctly predicted instances for fine-tuning, while incorrectly predicted instances are used as seed data for data augmentation. This approach enables the model to quickly learn simpler knowledge and progressively acquire more complex knowledge, thereby improving performance incrementally. Experimental results demonstrate that our method achieves state-of-the-art performance across all baselines. Additionally, we provide detailed ablation studies to validate the effectiveness of CDA.},
-  author   = {Kaidi Jia and Yanxia Wu and Ming Liu and Rongsheng Li},
-  month    = {12},
-  title    = {Curriculum-style Data Augmentation for LLM-based Metaphor Detection},
-  url      = {https://arxiv.org/pdf/2412.02956},
-  year     = {2024}
+@unpublished{Jia2024,
+  abstract    = {Recently, utilizing large language models (LLMs) for metaphor detection has achieved promising results. However, these methods heavily rely on the capabilities of closed-source LLMs, which come with relatively high inference costs and latency. To address this, we propose a method for metaphor detection by fine-tuning open-source LLMs, effectively reducing inference costs and latency with a single inference step. Furthermore, metaphor detection suffers from a severe data scarcity problem, which hinders effective fine-tuning of LLMs. To tackle this, we introduce Curriculum-style Data Augmentation (CDA). Specifically, before fine-tuning, we evaluate the training data to identify correctly predicted instances for fine-tuning, while incorrectly predicted instances are used as seed data for data augmentation. This approach enables the model to quickly learn simpler knowledge and progressively acquire more complex knowledge, thereby improving performance incrementally. Experimental results demonstrate that our method achieves state-of-the-art performance across all baselines. Additionally, we provide detailed ablation studies to validate the effectiveness of CDA.},
+  author      = {Kaidi Jia and Yanxia Wu and Ming Liu and Rongsheng Li},
+  city        = {Harbin},
+  institution = {College of Computer Science and Technology, Harbin Engineering University},
+  month       = {12},
+  note        = {arXiv:2412.02956 [cs.CL]},
+  title       = {Curriculum-style Data Augmentation for LLM-based Metaphor Detection},
+  url         = {https://arxiv.org/pdf/2412.02956},
+  year        = {2024}
 }
 @article{Tian2024,
   abstract  = {Metaphor detection is a challenging task in figurative language processing, which aims to distinguish between metaphorical and literal expressions in text. Existing methods tackle metaphor detection via training or fine-tuning discriminative models on labeled data. However, these approaches struggle to explain the underlying reasoning process behind the metaphorical/literal judgment. Recently, large language models (LLMs) have shown promise in language reasoning tasks. Although promising, LLM-based methods for metaphor detection and reasoning are still faced with the challenging issue of bringing the explainable concepts for metaphor reasoning and their linguistic manifestation. To fill this gap, we propose a novel Theory guided Scaffolding Instruction (TSI) framework that instructs an LLM to infer the underlying reasoning process of metaphor detection guided by metaphor theories for the first time. Our work is inspired by a pedagogical strategy called scaffolding instruction, which encourages educators to provide questioning and support as scaffolding so as to assist learners in constructing the understanding of pedagogical goals step by step. We first construct a metaphor knowledge graph grounded in metaphor theory, which serves as the instructional structure to obtain a series of scaffolding questions, directing the LLM to incrementally generate the reasoning process for metaphor understanding through dialogue interactions. During this theory guided instruction process, we explore the LLM’s mastery boundary and provide the relevant knowledge as scaffolding support when the question is beyond the LLM’s capability. Experimental results verify that our method significantly outperforms both the LLM-based reasoning methods and the SOTA methods in metaphor detection, indicating the facilitation of metaphor and instruction theories in guiding LLM-enabled reasoning process.},
@@ -49,21 +52,25 @@
   url       = {https://www.tandfonline.com/doi/pdf/10.1080/10926488.2024.2380348},
   year      = {2024}
 }
-@misc{Badran2025,
-  abstract = {This paper describes our system developed for SemEval-2025 Task 1, subtask A. This shared subtask focuses on multilingual idiom recognition and the ranking of images based on how well they represent the sense in which a nominal compound is used within a given contex-tual sentence. This study explores the use of a pipeline, where task-specific models are sequentially employed to address each problem step by step. The process involves three key steps: first, identifying whether idioms are in their literal or figurative form; second, transforming them if necessary; and finally, using the final form to rank the input images.},
-  author   = {Mohamed Badran and Youssof Nawar and Nagwa El - Makky},
-  pages    = {546-550},
-  title    = {AlexUNLP-NB at SemEval-2025 Task 1: A Pipeline for Idiom Disambiguation and Visual Representation},
-  url      = {https://aclanthology.org/2025.semeval-1.76/},
-  year     = {2025}
+@inproceedings{Badran2025,
+  abstract  = {This paper describes our system developed for SemEval-2025 Task 1, subtask A. This shared subtask focuses on multilingual idiom recognition and the ranking of images based on how well they represent the sense in which a nominal compound is used within a given contex-tual sentence. This study explores the use of a pipeline, where task-specific models are sequentially employed to address each problem step by step. The process involves three key steps: first, identifying whether idioms are in their literal or figurative form; second, transforming them if necessary; and finally, using the final form to rank the input images.},
+  author    = {Mohamed Badran and Youssof Nawar and Nagwa El - Makky},
+  booktitle = {Proceedings of the 19th International Workshop on Semantic Evaluation (SemEval-2025)},
+  pages     = {546-550},
+  publisher = {Association for Computational Linguistics},
+  title     = {AlexUNLP-NB at SemEval-2025 Task 1: A Pipeline for Idiom Disambiguation and Visual Representation},
+  url       = {https://aclanthology.org/2025.semeval-1.76/},
+  year      = {2025}
 }
-@misc{Gao2025,
-  abstract = {Idioms condense complex semantics into fixed phrases, and their meaning is often not directly connected to the literal meaning of their constituent words, making idiom comprehension a test of metaphor competence. Metaphor, as a cognitive process in human beings, has not yet found an effective evaluation method to assess the metaphor competence of LLMs (Large Language Models). In this paper, we propose a method to evaluate the metaphor competence of LLMs for the idiom understanding task: the Consistency Rating of Semantic Transparency (CR-ST). This strategy assesses the difficulty of understanding idioms through two dimensions: overall semantic transparency and constituent semantic transparency, aiming to gauge LLMs' mastery of metaphor competence. Subsequently , we introduce a prompt mechanism-Paraphrase Augmentation Strategy with Self-checking (PASS), based on human language logic, which guides the model to enhance its metaphor competence by explicitly generating idiom paraphrases. We conducted a baseline evaluation of seven LLMs on the CINLID and ChID datasets and analyzed the effectiveness of PASS on different subsets of semantic transparency. The experimental results demonstrate that LLMs can achieve performance comparable to PLMs (Pre-trained Language Models) without additional training, and PASS has a positive effect on the metaphor competence of LLMs.},
-  author   = {Hui Gao and Jing Zhang (张京) and Peng Zhang and Chang Yang},
-  pages    = {10460-10471},
-  title    = {Consistency Rating of Semantic Transparency: an Evaluation Method for Metaphor Competence in Idiom Understanding Tasks},
-  url      = {https://aclanthology.org/2025.coling-main.697/},
-  year     = {2025}
+@inproceedings{Gao2025,
+  abstract  = {Idioms condense complex semantics into fixed phrases, and their meaning is often not directly connected to the literal meaning of their constituent words, making idiom comprehension a test of metaphor competence. Metaphor, as a cognitive process in human beings, has not yet found an effective evaluation method to assess the metaphor competence of LLMs (Large Language Models). In this paper, we propose a method to evaluate the metaphor competence of LLMs for the idiom understanding task: the Consistency Rating of Semantic Transparency (CR-ST). This strategy assesses the difficulty of understanding idioms through two dimensions: overall semantic transparency and constituent semantic transparency, aiming to gauge LLMs' mastery of metaphor competence. Subsequently , we introduce a prompt mechanism-Paraphrase Augmentation Strategy with Self-checking (PASS), based on human language logic, which guides the model to enhance its metaphor competence by explicitly generating idiom paraphrases. We conducted a baseline evaluation of seven LLMs on the CINLID and ChID datasets and analyzed the effectiveness of PASS on different subsets of semantic transparency. The experimental results demonstrate that LLMs can achieve performance comparable to PLMs (Pre-trained Language Models) without additional training, and PASS has a positive effect on the metaphor competence of LLMs.},
+  author    = {Hui Gao and Jing Zhang (张京) and Peng Zhang and Chang Yang},
+  booktitle = {Proceedings of the 31st International Conference on Computational Linguistics},
+  pages     = {10460-10471},
+  publisher = {Association for Computational Linguistics},
+  title     = {Consistency Rating of Semantic Transparency: an Evaluation Method for Metaphor Competence in Idiom Understanding Tasks},
+  url       = {https://aclanthology.org/2025.coling-main.697/},
+  year      = {2025}
 }
 @article{Lai2024,
   abstract  = {Figurative language generation (FLG) is the task of reformulating a given text to include a desired figure of speech, such as a hyperbole, a simile, and several others, while still being faithful to the original context. This is a fundamental, yet challenging task in Natural Language Processing (NLP), which has recently received increased attention due to the promising performance brought by pre-trained language models. Our survey provides a systematic overview of the development of FLG, mostly in English, starting with the description of some common figures of speech, their corresponding generation tasks, and datasets. We then focus on various modelling approaches and assessment strategies, leading us to discussing some challenges in this field, and suggesting some potential directions for future research. To the best of our knowledge, this is the first survey that summarizes the progress of FLG including the most recent development in NLP. We also organize corresponding resources, e.g., article lists and datasets, and make them accessible in an open repository. We hope this survey can help researchers in NLP and related fields to easily track the academic frontier, providing them with a landscape and a roadmap of this area.},
@@ -117,13 +124,13 @@
   url       = {https://aclanthology.org/2020.coling-main.332/},
   year      = {2020}
 }
-@article{Dmitrijev2024,
+@inproceedings{Dmitrijev2024,
   abstract  = {Metaphors are figures of speech that connect new concepts with well-known ones and they help scientists look at familiar things in a different way, and thanks to that new discoveries are made. Automated detection of metaphors is a challenging task because words are context-specific and different from their literal definition. The article takes this special set of metaphors as its case study. The authors conducted two experiments to discover if large language models (LLMs) are able to detect them and explain what they mean. It was concluded that the task of metaphor-identification requires comprehensive analysis of word phrases. Besides, LLMs should be trained on datasets containing extralinguistic information about the world in general. The task of explaining metaphors explanation seemed to be less difficult. Two language models managed this task, however, further research is required to improve their nonliteral reasoning capabilities to interpret figurative phrases with different meanings.},
   author    = {Alexander Vladislavovitch Dmitrijev and Elena Sergeevna Krupnova and Anastasia Aleksandrovna Protopopova},
   doi       = {10.1007/978-3-031-76797-5_26/TABLES/1},
   isbn      = {9783031767968},
   issn      = {23673389},
-  journal   = {Lecture Notes in Networks and Systems},
+  booktitle = {Scenarios, Fictions, and Imagined Possibilities in Science, Engineering, and Education},
   keywords  = {analogies,computational linguistics,large language models,metaphors},
   pages     = {326-341},
   publisher = {Springer Science and Business Media Deutschland GmbH},
