feat(thesis): Implement metaphor detection prototype
Soft rain of knowledge falls
Corpus client takes first steps
Metaphors unfold

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -7,3 +7,12 @@
   number  = {1},
   pages   = {1--10}
 }
+
+@misc{vuamsterdammetaphorcorpus,
+  title     = {{VU} Amsterdam Metaphor Corpus},
+  author    = {Gerard J Steen and Aletta G Dorst and J Berenike Herrmann and Anna A Kaal and Tina Krennmayr},
+  url       = {http://hdl.handle.net/20.500.12024/2541},
+  note      = {Oxford Text Archive},
+  copyright = {Available for non-commercial use on condition that the terms of the {BNC} Licence are observed and that this header is included in its entirety with any copy distributed.},
+  year      = {2010}
+}
