feat: Enhance metaphor research documentation
Metaphors dance softly here
Corpus details unfold now
Research path takes shape

--- a/includes/background.tex
+++ b/includes/background.tex
@@ -9,7 +9,13 @@
 \subsection{Datasets}
 \begin{itemize}
     \item SemEval-2022 Task 2 (idioms)
-    \item VU Amsterdam Metaphor Corpus
+    \item VU Amsterdam Metaphor Corpus (VUAMC)
+    \begin{itemize}
+        \item Generally available via the Oxford Text Archive (currently down, legacy link accessible).
+        \item The corpus is available as XML.
+        \item A Python client has been developed to interface with the dataset.
+        \item Goal: Compare annotation methodology with other datasets and explore possibilities for merging.
+    \end{itemize}
     \item Supporting datasets (MAGPIE, TroFi, MOH)
     \item Conceptual resources (MetaNet)
 \end{itemize}
