--- a/includes/rq1_detection.tex
+++ b/includes/rq1_detection.tex
@@ -5,6 +5,7 @@
 \begin{itemize}
     \item Idioms: SemEval-2022 (detection / idiomaticity)
     \item Metaphors: VUA (token-level metaphor detection)
+    \item Note: Initial prototyping focuses on the detection module as a foundation for subsequent replacement tasks.
     \item Compare:
           \begin{itemize}
               \item Agentic pipeline
