feat: Enhance dataset documentation and research workflow
Metaphors dance softly
Datasets bloom with new insights
Research path unfolds

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -8,6 +8,7 @@
   pages   = {1--10}
 }
 
+# VU Amsterdam Metaphor Corpus
 @misc{vuamsterdammetaphorcorpus,
   title     = {{VU} Amsterdam Metaphor Corpus},
   author    = {Gerard J Steen and Aletta G Dorst and J Berenike Herrmann and Anna A Kaal and Tina Krennmayr},
@@ -15,4 +16,32 @@
   note      = {Oxford Text Archive},
   copyright = {Available for non-commercial use on condition that the terms of the {BNC} Licence are observed and that this header is included in its entirety with any copy distributed.},
   year      = {2010}
+}
+
+# SemEval-2022 Task 2: Multilingual Idiomaticity Detection and Sentence Embedding
+@inproceedings{tayyar-madabushi-etal-2022-semeval,
+  title     = {{S}em{E}val-2022 Task 2: Multilingual Idiomaticity Detection and Sentence Embedding},
+  author    = {Tayyar Madabushi, Harish  and
+               Gow-Smith, Edward  and
+               Garcia, Marcos  and
+               Scarton, Carolina  and
+               Idiart, Marco  and
+               Villavicencio, Aline},
+  editor    = {Emerson, Guy  and
+               Schluter, Natalie  and
+               Stanovsky, Gabriel  and
+               Kumar, Ritesh  and
+               Palmer, Alexis  and
+               Schneider, Nathan  and
+               Singh, Siddharth  and
+               Ratan, Shyam},
+  booktitle = {Proceedings of the 16th International Workshop on Semantic Evaluation (SemEval-2022)},
+  month     = jul,
+  year      = {2022},
+  address   = {Seattle, United States},
+  publisher = {Association for Computational Linguistics},
+  url       = {https://aclanthology.org/2022.semeval-1.13/},
+  doi       = {10.18653/v1/2022.semeval-1.13},
+  pages     = {107--121},
+  abstract  = {This paper presents the shared task on Multilingual Idiomaticity Detection and Sentence Embedding, which consists of two subtasks: (a) a binary classification task aimed at identifying whether a sentence contains an idiomatic expression, and (b) a task based on semantic text similarity which requires the model to adequately represent potentially idiomatic expressions in context. Each subtask includes different settings regarding the amount of training data. Besides the task description, this paper introduces the datasets in English, Portuguese, and Galician and their annotation procedure, the evaluation metrics, and a summary of the participant systems and their results. The task had close to 100 registered participants organised into twenty five teams making over 650 and 150 submissions in the practice and evaluation phases respectively.}
 }
