--- a/includes/rq1_detection.tex
+++ b/includes/rq1_detection.tex
@@ -3,8 +3,8 @@
 
 \subsection{Experiments}
 \begin{itemize}
-    \item Idioms: SemEval-2022 (detection / idiomaticity)
-    \item Metaphors: VUA (token-level metaphor detection)
+    \item Idioms: SemEval-2022 (detection / idiomaticity) \cite{tayyar-madabushi-etal-2022-semeval}
+    \item Metaphors: VUA (token-level metaphor detection) \cite{vuamsterdammetaphorcorpus}
     \item Note: Initial prototyping focuses on the detection module as a foundation for subsequent replacement tasks.
     \item Compare:
           \begin{itemize}
